--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -24,6 +24,7 @@
                 <select id="userType" name="userType">
                     <option value="aluno">Aluno</option>
                     <option value="empresa">Empresa Parceira</option>
+                    <option value="professor">Professor</option>
                 </select>
             </div>
             <button type="submit">Entrar</button>
