--- a/codigo/public/cadastro-aluno.html
+++ b/codigo/public/cadastro-aluno.html
@@ -36,8 +36,8 @@
                 <input type="text" id="endereco" name="endereco" required>
             </div>
             <div class="form-group">
-                <label for="empresa">Empresa:</label>
-                <select id="empresa" name="empresa" required></select>
+                <label for="instituicao">Instituição:</label>
+                <select id="instituicao" name="instituicao" required></select>
             </div>
             <div class="form-group">
                 <label for="curso">Curso:</label>
