--- a/codigo/public/perfil-professor.html
+++ b/codigo/public/perfil-professor.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil do Aluno - Sistema de Mérito</title>
+    <title>Perfil do Professor - Sistema de Mérito</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dashboard.css">
 </head>
+
 <body>
     <header>
-        <h1>Perfil do Aluno</h1>
+        <h1>Perfil do Professor</h1>
         <nav>
             <ul>
-                <li><a href="dashboard-aluno.html">Dashboard</a></li>
+                <li><a href="dashboard-professor.html">Dashboard</a></li>
                 <li><a href="#" id="logoutBtn">Sair</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <form id="perfilForm">
             <div class="form-group">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+                <input type="text" id="nome" name="nome" required readonly>
             </div>
             <div class="form-group">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required readonly>
             </div>
             <div class="form-group">
                 <label for="cpf">CPF:</label>
-                <input type="text" id="cpf" name="cpf" required>
+                <input type="text" id="cpf" name="cpf" required readonly>
             </div>
             <div class="form-group">
-                <label for="rg">RG:</label>
-                <input type="text" id="rg" name="rg" required>
-            </div>
-            <div class="form-group">
-                <label for="endereco">Endereço:</label>
-                <input type="text" id="endereco" name="endereco" required>
+                <label for="departamento">Departamento:</label>
+                <input type="text" id="departamento" name="departamento" required readonly>
             </div>
             <div class="form-group">
                 <label for="instituicao">Instituição:</label>
-                <select id="instituicao" name="instituicao" required></select>
+                <input type="text" id="instituicao" name="instituicao" required readonly>
             </div>
-            <div class="form-group">
-                <label for="curso">Curso:</label>
-                <input type="text" id="curso" name="curso" required>
-            </div>
-            <button type="submit">Atualizar Perfil</button>
         </form>
-        <button id="excluirConta">Excluir Conta</button>
     </main>
-
     <script src="js/auth.js" type="module"></script>
     <script src="js/crud.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
 </body>
+
 </html>
