--- a/codigo/public/dashboard-aluno.html
+++ b/codigo/public/dashboard-aluno.html
@@ -35,9 +35,17 @@
 
         <section id="vantagens">
             <h3>Vantagens Disponíveis</h3>
-            <ul id="listaVantagens"></ul>
+            <div id="listaVantagens" class="vantagens-grid"></div>
         </section>
+
+        <section id="resgates">
+            <h3>Histórico de Resgates</h3>
+            <ul id="listaResgates"></ul>
+        </section>
+        
     </main>
+
+    
 
     <script src="js/auth.js" type="module"></script>
     <script src="js/crud.js" type="module"></script>
