--- a/codigo/public/dashboard-empresa.html
+++ b/codigo/public/dashboard-empresa.html
@@ -25,8 +25,26 @@
 
         <section id="vantagens">
             <h3>Vantagens Oferecidas</h3>
-            <ul id="listaVantagens"></ul>
-            <button id="adicionarVantagem">Adicionar Nova Vantagem</button>
+            <form id="vantagemForm">
+                <div class="form-group">
+                    <label for="nomeVantagem">Nome da Vantagem:</label>
+                    <input type="text" id="nomeVantagem" name="nome" required>
+                </div>
+                <div class="form-group">
+                    <label for="descricaoVantagem">Descrição:</label>
+                    <textarea id="descricaoVantagem" name="descricao" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="custoVantagem">Custo (em moedas):</label>
+                    <input type="number" id="custoVantagem" name="custo" min="1" required>
+                </div>
+                <div class="form-group">
+                    <label for="imagemVantagem">URL da Imagem:</label>
+                    <input type="url" id="imagemVantagem" name="imagem" required>
+                </div>
+                <button type="submit">Cadastrar Vantagem</button>
+            </form>
+            <div id="listaVantagens"></div>
         </section>
 
         <section id="resgates">
